<resources>
    <string name="app_name">Simple 24H Clock</string>
    <string name="app_widget_description" />
    <string name="title_activity_app_widget_settings">Simple 24H Clock</string>
    <string name="custom_text_note" formatted="false">Input the format directly into the preview (e.g., yyyy/MM/dd EEEE).
        \nSee <a href="https://developer.android.com/reference/kotlin/java/time/format/DateTimeFormatter#patterns-for-formatting-and-parsing">DateTimeFormatter</a>.
        \nSeconds and milliseconds are not supported.
        \nThe label is displayed in the center.
        \nUse line breaks to adjust position.
    </string>
    <string name="cancel">Cancel</string>
    <string name="label">Label</string>
    <string name="none">None</string>
    <string name="recommended_e_g_sun_31">Recommended (e.g. Sun 31)</string>
    <string name="custom">Custom</string>
    <string name="text_locale">Display Language</string>
    <string name="edit_here">Edit here.\n\n\ne.g.\nE dd</string>
    <string name="optional">Optional</string>
    <string name="minute_hand">Minute Hand</string>
    <string name="minutes_hours_dots">Minute &amp; Hour Dots</string>
    <string name="day_of_year_hand">Day of Year Hand</string>
    <string name="day_of_year_dots">Month Dots (Snap)</string>
    <string name="background_alpha">Background Opacity</string>
    <string name="tap_behavior">Tap Action</string>
    <string name="alarm">Alarm</string>
    <string name="calendar">Calendar</string>
    <string name="other_apps">Other Apps…</string>
    <string name="apply">Apply</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="colors">Colors</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="opacity">Opacity</string>
    <string name="linked_with_day">Opacity (Linked with Day Area)</string>
    <string name="linked_with_night">Opacity (Linked with Night Area)</string>
    <string name="rotate">Rotate</string>
    <string name="sun_top">Sun Top</string>
    <string name="moon_top">Moon Top</string>
    <string name="auto_change_at_6_00_and_18_00">Auto (Change at 6:00 and 18:00)</string>
    <string name="moon_phase">Moon Phase</string>
    <string name="settings">Settings</string>
    <string name="prevent_time_lag">Prevent time lag</string>
    <string name="donation_star">✨️</string>
    <string name="donation_dialog_title">Support the Developer</string>
    <string name="donation_dialog_message">This will not unlock any features.
        \nI\'ll just enjoy a fresh cup of coffee!
    </string>
    <string name="donation_button_positive">Support(%1$s)</string>
    <string name="donation_button_negative">Cancel</string>
    <string name="donation_thanks">Thanks for the drink! ☕</string>
    <string name="donation_error">Item not found</string>
    <string name="fix_hour_hand">Fix Hour Hand</string>
    <string name="use_alarm_method_for_updates">Use Alarm Method for Updates</string>
    <string name="performance">Performance</string>
    <string name="use_foreground_service_for_updates">Use Foreground Service for Updates</string>
    <string name="notify_text">Ensuring widget accuracy</string>
    <string name="use_fgs_summery">Keeps the clock active via a small notification.</string>
    <string name="use_alarm_method_summary">[Experimental] Uses system alarm for higher priority.</string>
    <string name="_default">Default</string>
    <string name="show_sun_moon_inside">Show Sun &amp; Moon inside</string>
    <string name="system_default">System Default</string>
    <string name="invalid_format">[ERROR]</string>
    <string-array name="part_names">
        <item>Hour Hand</item>
        <item>Minute Hand</item>
        <item>Day of Year Hand</item>
        <item>Hour Dots</item>
        <item>Minute Dots</item>
        <item>Month Dots</item>
        <item>Border</item>
        <item>Sun</item>
        <item>Moon</item>
        <item>Day Area</item>
        <item>Night Area</item>
        <item>Label</item>
    </string-array>
    <string-array name="part_keys">
        <item>colorHour</item>
        <item>colorMinute</item>
        <item>colorDayOfYear</item>
        <item>colorDots</item>
        <item>colorMinuteDots</item>
        <item>colorDayOfYearDots</item>
        <item>colorBorder</item>
        <item>colorSun</item>
        <item>colorMoon</item>
        <item>colorDayArea</item>
        <item>colorNightArea</item>
        <item>colorText</item>
    </string-array>
</resources>